--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "therachit",
-  "homepage": "https://ghostdeveloper404.github.io/therachit/",
+  "homepage": "https://ghostdeveloper404.github.io/therachit/src/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
